--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -5,7 +5,7 @@
       <p id = "a" style="text-align:center"><%= radio_button_tag("check","check0") %>
       <%= label_tag("check_check0", "赤身肉(牛、豚、羊、馬)摂取量が1日100g未満である") %></p>
 
-
+      #コメントアウト
 
       <p id = "b" style="text-align:center"><%= submit_tag("Click") %></p>
    </body>
