--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -6,8 +6,10 @@
       <%= label_tag("check_check0", "赤身肉(牛、豚、羊、馬)摂取量が1日100g未満である") %></p>
 
       #コメントアウト
+      #テスト6/6
 
       <p id = "b" style="text-align:center"><%= submit_tag("Click") %></p>
    </body>
   </html>
 <% end %>
+
