--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   <body>
     <div class = "header">
       <div class = "header-logo">
-        <a href="http://localhost:3000/top">大腸癌の予防アプリ</a></div>
+        <a href="http://localhost:3000/">大腸癌の予防アプリ</a></div>
 
 
 
@@ -39,8 +39,20 @@
           よくあるご質問
          </li>
          <li>
-          <a href= "http://localhost:3000/login">ログイン</a>
+
+           <% if account_signed_in? %>
+            <%= link_to 'ログアウト',destroy_account_session_path,method: :delete %>
+           <% else %>
+            <%= link_to 'ログイン',new_account_session_path,class:'post' %>
+           <% end %>
+
+
+
          </li>
+
+
+
+
        </ul>
      </div>
 
